some refactoring to sidebar; fixed unclickable welcome page; renamed cloud rest api section pages to be in order (there was a gap)

--- a/src/layouts/doc-layout/doc-layout.module.scss
+++ b/src/layouts/doc-layout/doc-layout.module.scss
@@ -111,7 +111,7 @@ h2.sidebar-section-title {
   }
 }
 
-.sidebarNodeWithChildren > a {
+.sidebar-node-with-children > a {
   &.sidebar-node-title_active {
     &:after {
       content: '';
